--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -6,6 +6,7 @@
       </div>
     </ion-nav-buttons>
   <ion-content>
+      {{favorites}}
     <ion-list show-delete="shouldShowDelete">
       <ion-item ng-repeat="dish in dishes | favoriteFilter:favorites" href="#/app/menu/{{dish.id}}" class="item-thumbnail-left" on-swipe-left="deleteFavorite(dish.id)">
         <img ng-src="{{baseURL+dish.image}}">
